--- a/prometheus_grafana.yaml
+++ b/prometheus_grafana.yaml
@@ -8,7 +8,7 @@ metadata:
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus
+  name: prometheus-dummy
   namespace: monitoring
 spec:
   type: LoadBalancer
@@ -16,9 +16,24 @@ spec:
     app: prometheus
   ports:
     - name: web
+      port: 90901
+      targetPort: 90901
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus
+  namespace: monitoring
+spec:
+  type: NodePort
+  externalIPs:
+    - 172.16.222.61 
+  selector:
+    app: prometheus
+  ports:
+    - name: web
       port: 9090
       targetPort: 9090
- 
 ---
  
 apiVersion: apps/v1
