--- a/influxdb1.yaml
+++ b/influxdb1.yaml
@@ -10,6 +10,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: influxdb-data-pv
+  namespace: monitoring
 spec:
   capacity:
     storage: 8Gi
