--- a/influxdb1.yaml
+++ b/influxdb1.yaml
@@ -3,6 +3,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: standard-resize
+  namespace: monitoring
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: Immediate 
 ---
@@ -34,6 +35,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: influxdb-pvc
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteOnce
