--- a/influxdb3.yaml
+++ b/influxdb3.yaml
@@ -62,6 +62,13 @@ spec:
     spec:
       securityContext:
         runAsUser: 0
+      initContainers:
+      - name: create-influxdb-directory
+        image: busybox
+        command: ['sh', '-c', 'mkdir -p /var/lib/influxdb']
+        volumeMounts:
+        - name: influxdb-storage
+          mountPath: /var/lib/influxdb
       containers:
       - name: influxdb
         image: influxdb:latest
