--- a/influxdb4.yaml
+++ b/influxdb4.yaml
@@ -21,7 +21,7 @@ spec:
   storageClassName: local 
   volumeMode: Filesystem
   local:
-      path: /var/lib/influxdb
+      path: /var/lib/vmware
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -62,13 +62,6 @@ spec:
     spec:
       securityContext:
         runAsUser: 0
-      initContainers:
-      - name: create-influxdb-directory
-        image: busybox
-        command: ['sh', '-c', 'mkdir -p /var/lib/influxdb']
-        volumeMounts:
-        - name: influxdb-storage
-          mountPath: /var/lib/influxdb
       containers:
       - name: influxdb
         image: influxdb:latest
