--- a/metrics-enable-influx.yaml
+++ b/metrics-enable-influx.yaml
@@ -7,5 +7,5 @@ spec:
   metrics-collection:
     enabled: true
     metrics-sink:
-      url: "http://172.16.222.61:31877/api/v1/write"
-      data-format: "influxdb"
+      url: "http://172.16.222.61:31877/write?db=vmware"
+      data-format: "influx"
